--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,29 +1,43 @@
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
     margin: 0;
     padding: 0;
 }
 
-header {
-    background: #333;
-    color: #fff;
-    padding: 10px 20px;
-    text-align: center;
-}
-
-header nav a {
-    color: #fff;
-    margin: 0 10px;
-    text-decoration: none;
-}
-
-footer {
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+.navbar {
     position: fixed;
-    bottom: 0;
+    top: 0;
     width: 100%;
+    background: #333;
+    color: #fff;
+    padding: 10px;
+}
+
+.navbar ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: #fff;
+    margin: 0 15px;
+}
+
+.section {
+    padding: 100px 20px;
+    text-align: center;
+}
+
+#about {
+    background-color: #f4f4f4;
+}
+
+#projects {
+    background-color: #e2e2e2;
+}
+
+#contact {
+    background-color: #ccc;
 }
