--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,26 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <section>
-        <h2>Welcome to My Portfolio</h2>
-        <p>Explore my projects and get to know more about me!</p>
-    </section>
+<section id="about" class="section">
+    <h1>About Me</h1>
+    <p>Introduce yourself here with a short bio and your expertise.</p>
+</section>
 
-    <section>
-        <h3>Featured Projects</h3>
-        <ul>
-            {% for project in projects %}
-                <li>
-                    <h4>{{ project.title }}</h4>
-                    <p>{{ project.description }}</p>
-                    <a href="{{ project.url }}" target="_blank">View Project</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </section>
+<section id="projects" class="section">
+    <h1>My Projects</h1>
+    <div class="project-list">
+        {% for project in projects %}
+        <div class="project">
+            <img src="{{ project.image_url }}" alt="{{ project.title }}">
+            <h2>{{ project.title }}</h2>
+            <p>{{ project.description }}</p>
+        </div>
+        {% endfor %}
+    </div>
+</section>
+
+<section id="contact" class="section">
+    <h1>Contact Me</h1>
+    <p>Provide your contact details or a form here.</p>
+</section>
 {% endblock %}
