--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,10 +2,15 @@
 nav ul {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     list-style: none;
     background-color: #333;
     padding: 10px 0;
     margin: 0;
+}
+
+nav ul li {
+    margin: 0 10px;
 }
 
 nav ul li a {
@@ -13,6 +18,7 @@ nav ul li a {
     text-decoration: none;
     padding: 10px 15px;
     transition: background-color 0.3s;
+    font-size: 16px;
 }
 
 nav ul li a:hover {
@@ -25,15 +31,17 @@ nav ul li a:hover {
     padding: 15px;
     text-align: center;
     margin: 0;
+    font-size: 24px;
+    color: #333;
 }
 
 /* プロフィールコンテナ */
 .profile-container {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: flex-start; /* 左揃え */
+    align-items: flex-start; /* 上寄せ */
     padding: 20px;
-    max-width: 800px;
+    max-width: 900px;
     margin: 20px auto;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
@@ -46,12 +54,12 @@ nav ul li a:hover {
     width: 300px;
     height: 400px;
     margin-right: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #eaeaea;
     border: 1px solid #ccc;
     border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
@@ -62,19 +70,28 @@ nav ul li a:hover {
 }
 
 /* 詳細情報のスタイル */
+.profile-details {
+    display: flex;
+    flex-direction: column; /* 垂直方向 */
+    justify-content: center; /* 中央揃え */
+}
+
 .profile-details p {
     font-size: 18px;
     margin: 10px 0;
+    line-height: 1.5;
 }
 
 /* 技術セクション */
 .skills-container {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .skills-container h2 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    font-size: 22px;
+    color: #333;
 }
 
 .skills-container ul {
@@ -84,7 +101,8 @@ nav ul li a:hover {
 
 .skills-container li {
     font-size: 18px;
-    margin: 5px 0;
+    margin: 10px 0;
+    line-height: 1.5;
 }
 
 .years {
