--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@ nav ul {
     justify-content: center; /* 中央揃え */
     list-style: none;
     padding: 10px 0;
-    background-color: #333;
+    background-color: #06f76adc;
     margin: 0;
 }
 
@@ -13,7 +13,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: white;
+    color: rgb(43, 100, 48);
     text-decoration: none;
     font-size: 18px;
     padding: 5px 10px;
@@ -31,7 +31,7 @@ header h1 {
     padding: 20px 0;
     margin: 0;
     font-size: 24px;
-    color: #333;
+    color: #f50505;
 }
 
 /* プロフィールのコンテナ */
@@ -56,8 +56,8 @@ header h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #eaeaea;
-    border: 1px solid #ccc;
+    background-color: #f7fc00ec;
+    border: 1px solid #e803fd;
     border-radius: 5px;
 }
 
